--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "@types/react-router-dom": "^5.1.5",
     "@types/yup": "^0.28.0",
     "@unform/core": "^2.1.0",
     "@unform/web": "^2.1.0",
@@ -20,6 +21,7 @@
     "react-icons": "^3.10.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
+    "react-spring": "^8.0.27",
     "styled-components": "^5.1.0",
     "typescript": "~3.7.2",
     "uuidv4": "^6.0.8",
