--- a/backend/.eslintrc.json
+++ b/backend/.eslintrc.json
@@ -29,10 +29,21 @@
     "class-methods-use-this": "off",
     "no-useless-constructor": "off",
     "@typescript-eslint/camelcase": "off",
+    "camelcase": "off",
     "@typescript-eslint/no-unused-vars": ["error", {
       "argsIgnorePattern": "_"
     }],
-    "@typescript-eslint/interface-name-prefix": ["error", {"prefixWithI": "always"}],
+    "@typescript-eslint/naming-convention": [
+      "error",
+      {
+        "selector": "interface",
+        "format": ["PascalCase"],
+        "custom": {
+          "regex": "^I[A-Z]",
+          "match": true
+        }
+      }
+    ],
     "import/extensions": [
       "error",
       "ignorePackages",
