--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,2 +1,14 @@
 APP_SECRET=
 APP_WEB_URL=
+APP_API_URL=
+
+MAIL_DRIVER=
+
+STORAGE_DRIVER=
+
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
+
+REDIS_HOST=
+REDIS_PORT=
+REDIS_PASS=
